Adding API product documentation
