# app/Http/Controllers/CategoriesController.php
@@ -242,6 +242,18 @@ class CategoriesController extends Controller
         ]);
     }
 
+    /**
+     * @OA\Get(
+     *     tags={"Categories"},
+     *     path="/api/categories/trashed",
+     *     summary="List of trashed categories",
+     *     description="Return a list of trashed categories",
+     *     @OA\Response(response="200", description="An json"),
+     *      security={
+     *           {"apiKey": {}}
+     *       }
+     * )
+     */
     public function trashed()
     {
         $this->repository->pushCriteria(new OnlyTrashedCriteria());
@@ -252,6 +264,19 @@ class CategoriesController extends Controller
         ]);
     }
 
+    /**
+     * @OA\Put(
+     *      tags={"Categories"},
+     *      path="/api/categories/restore/{id}",
+     *      summary="Restore a category",
+     *      description="Restore a category",
+     *      operationId="getCategoryById",
+     *     @OA\Response(response="200", description="Store categories"),
+     *      security={
+     *           {"apiKey": {}}
+     *      }
+     * )
+     */
     public function restore($id)
     {
         try {
